# AI-auto-webtesting

./: .gitignore  README.md  prd.md  progress.md  pyproject.toml  如何让AI帮你做前端自动化测试.md
.github/workflows/: stability-nightly.yml
aut/: __init__.py
aut/config/: __init__.py
aut/dsl/: __init__.py  models.py  parser.py
aut/replay/: __init__.py  schema.py  store.py
aut/reporting/: __init__.py  allure_aggregate.py  allure_entities.py  allure_mapper.py
aut/runner/: __init__.py  assertions.py  browser_use_adapter.py  cli.py  contracts.py  dry_run_driver.py  engine.py  playwright_bridge_driver.py  playwright_task_mapper.py  pytest_scheduler.py
aut_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cases/common/: login.yaml  playwright_e2e_demo.yaml
cases/product/: create_vpc.yaml
docs/: browser_use_planner_contract.md
tests/: test_allure_entities.py  test_allure_mapper.py  test_allure_report_integration.py  test_assertions.py  test_browser_use_adapter.py  test_case_parser.py  test_case_scheduler_entry.py  test_cli.py  test_execution_engine.py  test_playwright_task_mapper.py  test_pytest_scheduler.py  test_replay_store.py
